- Added a configurable speed boost when sprinting while flying forward
- Adding or removing armor is now done using a crafting grid. This allows armored jetpacks to be auto-crafted. Note that removing armor will only properly return plating if done by a player.
- Removed armoring NEI handlers as they are no longer needed
- Emergency hover mode can be toggled by switching hover mode while sneaking
- Sneaking while flying slows down sideways flight to half speed
- Jetpacks and Flux Packs are now on by default upon creation
- Sneak-right clicking a jetpack on a Zombie or a Skeleton will force it to wear and use it
- Fixed armored jetpacks absorbing much more damage than intended. This was making players invincible when they were also wearing other pieces of armor
- Fixed engine/hover controls not working when bound to mouse buttons
- Updated CoFH Energy API, and actually include the whole package this time *cough*
- RIP, resource pack authors



----------------------------------
Version 1.2.0
2014-10-18
----------------------------------
- Added full EnderIO support! This includes EnderIO versions of the jetpacks, flux packs and components.
- Integration with TE or EIO can be disabled/enabled in the config
- Changed the structure of the config... again. Mainly the tuning portions of it, make sure to transfer over any edits you did to them if needed.
- HUD now hides if F3 debug mode is enabled
- Code refactors and cleanups
- Note: the item IDs of Creative Jetpack/Flux Packs, Tuberous Jetpacks and Armor Platings have changed. Shouldn't cause any problems, they will just disappear or change into missing textures which you can just delete.



----------------------------------
Version 1.1.4
2014-10-02
----------------------------------
- Removed potentially infinite loop when upgrading jetpacks
- Fixed Leadstone Jetpack recipe not taking power from used Leadstone Flux Capacitors
- Recipes that use glass blocks now use Ore Dictionary glass


