@@ -5,6 +5,7 @@ import net.minecraftforge.oredict.RecipeSorter.Category;
 
 import org.apache.logging.log4j.Logger;
 
+import tonius.simplyjetpacks.command.CommandSwitch;
 import tonius.simplyjetpacks.config.Config;
 import tonius.simplyjetpacks.crafting.UpgradingRecipe;
 import tonius.simplyjetpacks.network.PacketHandler;
@@ -15,6 +16,7 @@ import cpw.mods.fml.common.Mod.Instance;
 import cpw.mods.fml.common.SidedProxy;
 import cpw.mods.fml.common.event.FMLInitializationEvent;
 import cpw.mods.fml.common.event.FMLPreInitializationEvent;
+import cpw.mods.fml.common.event.FMLServerStartingEvent;
 import cpw.mods.fml.common.event.FMLServerStoppingEvent;
 
 @Mod(modid = SimplyJetpacks.MODID, dependencies = SimplyJetpacks.DEPENDENCIES, guiFactory = SimplyJetpacks.GUI_FACTORY)
@@ -50,6 +52,11 @@ public class SimplyJetpacks {
     public static void init(FMLInitializationEvent evt) {
         ModItems.init();
         PacketHandler.init();
+    }
+    
+    @EventHandler
+    public static void serverStarting(FMLServerStartingEvent evt) {
+        evt.registerServerCommand(new CommandSwitch());
     }
     
     @EventHandler
